tests/rt/neg/ifc/lclear-implicit-range.trp
(* negative test; this program attempts to receive in a range without 
   sufficient clearance *)
   
rcv ({}, {alice}, [] )
